# Tianye

./: .gitignore  AGENTS.md  db.sqlite3  manage.py  pyproject.toml
.codegraph/: daemon.pid
beijing_test_gpx_routes/: README.md  beijing_chaoyang_park_west_loop.gpx  beijing_forbidden_city_outer_walk.gpx  beijing_location_pause_and_wrong_turn_test.gpx  beijing_olympic_forest_park_loop.gpx  beijing_shichahai_houhai_walk.gpx  beijing_temple_of_heaven_loop.gpx
data/elevation/: README.md
docs/: beijing-city-walk-ai-demo-implementation-checklist.md  beijing-city-walk-ai-demo-plan.md  business-plan-plus-scaffold.html  business-story.md  chinese-bp-reference-research.md  elevation-data-architecture.md  founder-background.md  map-processing-workflow.md  tianye-ios-shell-codebase-guide.md
frontend/: README.md
frontend/mobile/: playground-bootstrap.js  playground-core.js  playground-data.js  playground-map.js  playground-navigation.js  playground.css
frontend/tianye/: README.md  index.html  package-lock.json  package.json
frontend/tianye/src/: App.jsx  main.jsx  styles.css
maps/: admin.py  demo.py  demo_catalog.py  elevation.py  gpx.py  hiking_time.py  models.py  routing.py  urls.py  views.py
maps/management/commands/: import_beijing_scenic_spots.py
maps/migrations/: 0001_initial.py  0002_hikesession.py  0003_savedpath.py
maps/static/maps/: demo-common.js  demo-detail.js  demo-upload.js  demo.css  (+2 more)
scripts/: build_beijing_dev_layers.py  build_beijing_routing_graph.py  download_beijing_copernicus_dem.sh
tianye/: asgi.py  settings.py  urls.py  wsgi.py
(+15 files in other folders)
